# controlflow-integrity

./: .gitignore  CMakeLists.txt  README  run-cfi-eval.sh  run-cfi-pipeline.sh  run-cfi.sh  run.sh  test.cpp
Analysis/: .CMakeLists.txt.swp  .CallPathsAnalysisPass.cpp.swp  .CallPathsAnalysisPass.h.swp  .PassRegistration.cpp.swp  CMakeLists.txt  CallPathsAnalysisPass.cpp  CallPathsAnalysisPass.h  PassRegistration.cpp  TestModulePass.cpp
checkers/: .checker.cpp.swp  checker.cpp  rtlib.bc  rtlib.c
skeleton/: CMakeLists.txt  Skeleton.cpp
src/: CMakeLists.txt  CallPathsAnalysisPass.cpp  CallPathsAnalysisPass.h  ControlFlowIntegrityCheckerPass.cpp  ControlFlowIntegrityCheckerPass.h  FunctionsAnnotatorPass.cpp  FunctionsAnnotatorPass.h  PassRegistration.cpp
test/: callgraph.dot  licence_check.bc  licence_check.c  out  out.bc  out.ll  protected_call_path.dot  test.bc  test.cpp
